--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-project",
+  "name": "api-project-final",
   "version": "1.0.0",
   "description": "## Database Schema Design",
   "main": "index.js",
@@ -17,7 +17,6 @@
     "start": "npm start --prefix backend",
     "build": "npm run --prefix backend build"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC"
