Another deploy update

--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "start": "npm start --prefix backend",
     "build": "npm run --prefix backend build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/verofl/API-Project.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/verofl/API-Project/issues"
+  },
+  "homepage": "https://github.com/verofl/API-Project#readme"
 }
